crates/compiler/test_syntax/tests/snapshots/fail/ability_first_demand_not_indented_enough.expr.roc
MEq implements
eq : a, a -> U64 | a implements MEq

1
